--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 </head>
 <body bgcolor="#e4d1e4">
 <center><font color="red"><h1>INFORMATION</h1></font></center>
-<center><img src="C:\Users\Public\Pictures\jallianwala bagh\jr.jpg" width="55%" border="2"height="55%"></center>
+<center><img src="jr.jpg" width="55%" border="2"height="55%"></center>
 <center><table border=2 border color="orange"  cellspacing="5"  cellpadding="4"height="30%" width="40%">
 <caption><b><font size=5 color="red">facts</font></b></caption>
 <tr>
