--- a/generaldyer.html
+++ b/generaldyer.html
@@ -5,7 +5,7 @@
 <a href="history.html">BACK</a><br>
 <center><font color="red" size="7">General Dyer and Rowlt Act</font></center><br>
 <font color="purple"><h1>General Dyer</h1></font>
-<center><img src="C:\Users\Public\Pictures\jallianwala bagh\general.jpg"width="400" height="350"></center>
+<center><img src="general.jpg"width="400" height="350"></center>
 <b><font size="5"><p>General Reginald Dyer (1864-1927) was a British Army officer best known for his role in the Jallianwala Bagh
  massacre in 1919, in which British Indian Army troops under his command opened fire on a crowd of unarmed Indian civilians, killing
  hundreds and injuring thousands.
@@ -17,7 +17,7 @@ However, the Jallianwala Bagh massacre was widely condemned both in India and in
  of his command and forced to retire from the army. He became a controversial figure, with some British conservatives hailing him as
  a hero and others condemning him as a brutal and unjust oppressor.</p></font></font><br><br>
 <font color="purple"><h1> Rawlt Act</h1></font>
-<center><img src="C:\Users\Public\Pictures\jallianwala bagh\npaper.jpg" width="400" height="350"></center>
+<center><img src="npaper.jpg" width="400" height="350"></center>
 <p><b><font size="5">The Rowlatt Act, also known as the Anarchical and Revolutionary Crimes Act, was a controversial law passed
  by the British colonial government in India in 1919, in the aftermath of the First World War and the nonviolent civil disobedience movement 
 led by Mahatma Gandhi.
