--- a/heading.html
+++ b/heading.html
@@ -2,7 +2,7 @@
 <head>
 <title>heading</title>
 </head>
-<body background="C:\Users\Public\Pictures\jallianwala bagh\jb.jpg" style="background-size:100% 100%;">
+<body background="jb.jpg" style="background-size:100% 100%;">
 <center><font color="black" size="7" face="Bookman Old Style" ><b>JALLIANWALA BAGH</b></font>
 </body>
 </html>
