--- a/history.html
+++ b/history.html
@@ -3,11 +3,11 @@
 <title>history</title>
 </head>
 <body bgcolor="#e4d1e4">
-<a href ="generaldyer.html"><img src=" C:\Users\Public\Pictures\jallianwala bagh\general.jpg" 
+<a href ="generaldyer.html"><img src="general.jpg" 
 width"5%" height="6%"></a><br>General Dyer<center>
 <font color="red"><h1>HISTORY</h1></font></center>
 <a href="site.html">SPECIFICATIONS</a>
-<center><img src=" C:\Users\Public\Pictures\jallianwala bagh\history.jpg" width="50%" height="50%"></center>
+<center><img src="history.jpg" width="50%" height="50%"></center>
 <p><b><font size="5">The Jallianwala Bagh Massacre took place on <mark>13th April 1919</mark> on the day of Baisakhi when a large group 
 of men, women and children unaware of the martial law decided to assemble in the park. The peaceful protest was organised against the Rowlatt
  Act and the wrongful arrest of Congress leaders in India.  Without any warning, <a href ="generaldyer.html">General Dyer</a> ordered its men 
@@ -18,13 +18,13 @@ The incident created a rift between the Indian people and the British government
  faith in the fairness of the British regime. The Hunter Commission was set up to investigate the event and condemned the actions of General 
 Dyer yet no concrete punishment was issued against the General behind the most brutal killings in modern India.  
 
-<center><img src=" C:\Users\Public\Pictures\jallianwala bagh\images (1).jpg" width="50%" height="50%"></center>
+<center><img src="images (1).jpg" width="50%" height="50%"></center>
 
 The massacre permanently scarred relations between India and Britain and was the prelude to Mahatma Gandhi  noncooperation movement
  of 1920-22.</font></b></p><br><br>
 
 <h1>Early history</h1>
-<center><img src="C:\Users\Public\Pictures\jallianwala bagh\images (2).jpg" width="50%" height="50%"></center>
+<center><img src="images (2).jpg" width="50%" height="50%"></center>
 <font size=5><b><p>The 7-acre (28,000 m2) site is located in the vicinity of the Golden Temple complex.
 Jallianwala Bagh or the garden of the Jallah-man, with its well, implies that it was once green and flowering.Over the years it had become
  popular as a recreation ground and an area of rest for those visiting the nearby Golden temple.In 1919, it was a dried-out plot, surrounded 
@@ -32,7 +32,7 @@ by tightly packed multi-occupancy buildings dividend by some narrow streets, and
 and surrounded by a wall.The place derives its name from the Pandit Jalla.</p></b></font>
 
 <h1>Massacre</h1>
-<center><img src="C:\Users\Public\Pictures\jallianwala bagh\images (2).jpg"  width="50%"  height="50%"></center>
+<center><img src="images (2).jpg"  width="50%"  height="50%"></center>
 
 <font size=5><b><p>In 1919, in response to excluding Mahatma Gandhi from visiting Punjab, the secret deportation of Saifuddin Kitchlew and
  Satyapal on 10 April and the reactions to the Rowlatt Act, Punjab had witnessed attempts of Indians to gather and protest.[1] On the morning 
@@ -47,6 +47,6 @@ Bagh. By the time Dyer arrived with 90 Sikh, Gurkha, Baloch, Rajput troops from 
  Muslims and Christians.General Dyer then ordered his troops to fire at the crowds.1,650 rounds were fired and the number, killing and
  injuring many; the numbers are disputed.</p></b></font>
 <h1>Dried out plot in 1919</mark></h1>
-<center><img src="C:\Users\Public\Pictures\jallianwala bagh\download.jpg" width ="50%" height="50%"></center>
+<center><img src="download.jpg" width ="50%" height="50%"></center>
 </body>
 </html>
