--- a/management.html
+++ b/management.html
@@ -4,7 +4,7 @@
 <center><font color="red"><h1>MANAGEMENT</h1></font></center>
 
 <p><b><font size="5">
-<center><img src="C:\Users\Public\Pictures\jallianwala bagh\jr.jpg" width="400" height="350"></center>
+<center><img src="jr.jpg" width="400" height="350"></center>
 The site is managed by the Jallianwala Bagh National Memorial Trust formed under the Jallianwala Bagh National Memorial Act, 
 1951 passed by the Parliament of India.The initial trustees of the Trust were named as<mark> Jawaharlal Nehru, Saifuddin Kitchlew,
  Maulana Abul Kalam Azad, the President of the Indian National Congress, the Governor of Punjab, the Chief Minister of Punjab and
