--- a/museum.html
+++ b/museum.html
@@ -2,8 +2,8 @@
 <head><title>museum></title></head>
 <body bgcolor="#e4d1e4">
 <font color="#4a251c"  size="4" face="Cascadia Code"><center><h1>The Martyr's gallery and Museum</h1></center></font>
-<img src="C:\Users\Public\Pictures\jallianwala bagh\gg.jpg" hspace="10%"></img>
-<img src="C:\Users\Public\Pictures\jallianwala bagh\images (2).jpg"align="left"width="35%" height="40%"></img>
+<img src="gg.jpg" hspace="10%"></img>
+<img src="images (2).jpg"align="left"width="35%" height="40%"></img>
 
 <p><font size="5"><b>One of the seven urns containing the ashes of Udham Singh are kept in the museum
 The Martyr's gallery contains a number of paintings including some of political leaders and a painting of the inside of Jallianwala Bagh,
@@ -12,7 +12,7 @@ The names of those killed are not included.A portrait of Udham Singh is on displ
  his ashes are kept in the museum.<br>
 Using newspaper clippings and letters from Mahatma Gandhi, Rabindranath Tagore and others, 45 panels depicting the Amritsar 
 massacre are displayed.<br></b></p></font>
-<img src="C:\Users\Public\Pictures\jallianwala bagh\gg.jpg"width="40%" align="left"height="40%">
- <img src="C:\Users\Public\Pictures\jallianwala bagh\gg.jpg"width="40%" height="40%" align="right">
+<img src="gg.jpg"width="40%" align="left"height="40%">
+ <img src="gg.jpg"width="40%" height="40%" align="right">
 </body>
 </html>
