--- a/preview.html
+++ b/preview.html
@@ -2,12 +2,12 @@
 <head><title> preview</title></head>
 <body bgcolor="#ffe6ff">
 <center><font size=7 color="red"><b>PREVIEW</font></b></center>
-<img src="C:\Users\Chhaya\OneDrive\Pictures\Saved Pictures\Pictures - Copy\Saved Pictures\jalliawalabagh\jb2.jpg" height="50%" width="50%">
-<img src="C:\Users\Chhaya\OneDrive\Pictures\Saved Pictures\Pictures - Copy\Saved Pictures\jalliawalabagh\jalia.jpg" align="right" height="50%" width="50%">
+<img src="jb2.jpg" height="50%" width="50%">
+<img src="jalia.jpg" align="right" height="50%" width="50%">
 
-<img src="C:\Users\Chhaya\OneDrive\Pictures\Saved Pictures\Pictures - Copy\Saved Pictures\jalliawalabagh\jb2.jpg"  height="50%" width="50%">
+<img src="jb2.jpg"  height="50%" width="50%">
 
-<img src="C:\Users\Chhaya\OneDrive\Pictures\Saved Pictures\Pictures - Copy\Saved Pictures\jalliawalabagh\jb2.jpg"  align="right"height="50%" width="50%">
+<img src="jb2.jpg"  align="right"height="50%" width="50%">
 
 
 </body>
