--- a/visit.html
+++ b/visit.html
@@ -4,8 +4,8 @@
 </head>
 <body bgcolor="#e4d1e4">
 <center><font color="red"><h1>TOURIST </h1></font></center>
-<center><img src="C:\Users\Public\Pictures\jallianwala bagh\OIP.jpg" hspace="4" vspace="4"></center><br>
-<img src="C:\Users\Public\Pictures\jallianwala bagh\tou1.jpg" hspace="4" vspace="4" height="40%"width="38%"align="left">
+<center><img src="OIP.jpg" hspace="4" vspace="4"></center><br>
+<img src="tou1.jpg" hspace="4" vspace="4" height="40%"width="38%"align="left">
 <b><font size=5><p><br>Jallianwala Bagh is a public garden in Amritsar, Punjab, India, that is well-known for its historical significance. 
 It is a place that draws tourists from all over the world because of the Jallianwala Bagh Massacre that occurred there in 1919. This incident 
 is considered a turning point in India's struggle for independence from British colonial rule.</p>
@@ -14,7 +14,7 @@ is considered a turning point in India's struggle for independence from British 
  against the arrest of two leaders of the Indian National Congress. However, General Reginald Dyer, the British army officer in charge of
  Amritsar at the time, ordered his troops to open fire on the unarmed crowd, resulting in the death of hundreds of innocent civilians.</p><br><br>
 
-<img src="C:\Users\Public\Pictures\jallianwala bagh\tourism.jpg" hspace="4" vspace="4"height="45%" width="40%"align="right">
+<img src="tourism.jpg" hspace="4" vspace="4"height="45%" width="40%"align="right">
 
 <p>Today, Jallianwala Bagh is a national memorial and serves as a reminder of the sacrifices made by those who fought for India's
  independence. The garden has been preserved as it was at the time of the massacre, with bullet holes still visible in the walls. The
